force-app/main/default/objects/Contact/fields/FirstName2__c.field-meta.xml
<CustomField>
    <fullName>FirstName2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FirstName2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>