force-app/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>מין</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>אחר</fullName>
                <default>true</default>
                <label>אחר</label>
            </value>
            <value>
                <fullName>זכר</fullName>
            </value>
            <value>
                <fullName>נקבה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>