force-app/main/default/objects/Contact/fields/Label_Temp__c.field-meta.xml
<CustomField>
    <fullName>Label_Temp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label_Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>